Fix spacing

--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -178,8 +178,7 @@ figure.code {
 
 a > svg.anchor-symbol {
   color: transparent;
-  height: 1em;
-  //padding-top: 5px;
+  margin-left: 1rem;
 }
 
 
